objects/ssot__FinancialCustomer__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AccountId__c</fullName>
        <label>Account</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AssetUnderManagementAmt__c</fullName>
        <label>Asset Under Management Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ssot__CustomerCategory__c</fullName>
        <label>Customer Category</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CustomerMarketSegmentText__c</fullName>
        <label>Customer Market Segment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CustomerRating__c</fullName>
        <label>Customer Rating</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CustomerRiskTolerance__c</fullName>
        <label>Customer Risk Tolerance</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CustomerSegment__c</fullName>
        <label>Customer Segment</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CustomerServiceLevel__c</fullName>
        <label>Customer Service Level</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CustomerType__c</fullName>
        <label>Customer Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FinancialCustomerStatus__c</fullName>
        <label>Financial Customer Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FinancialInterestsText__c</fullName>
        <label>Financial Interests</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Financial Customer Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InvestmentExperienceLevel__c</fullName>
        <label>Investment Experience Level</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InvestmentObjectivesText__c</fullName>
        <label>Investment Objectives</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__JointOwnerLastTrxnDateTime__c</fullName>
        <label>Joint Owner Last Trxn Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__JointOwnerTotalHeldFinAcctsAmt__c</fullName>
        <label>Joint Owner Total Held Fin Accts Amt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ssot__LastInteractionDate__c</fullName>
        <label>Last Interaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__LastReviewDate__c</fullName>
        <label>Last Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__LastTransactionDate__c</fullName>
        <label>Last Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__LengthOfRelationshipYears__c</fullName>
        <label>Length Of Relationship Years</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__LifetimeValueAmt__c</fullName>
        <label>Lifetime Value</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__NetWorthAmt__c</fullName>
        <label>Net Worth</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ssot__NextInteractionDate__c</fullName>
        <label>Next Interaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__NextReviewDate__c</fullName>
        <label>Next Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__PersonalInterestsText__c</fullName>
        <label>Personal Interests Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PolicyCount__c</fullName>
        <label>Policy Count</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__PrimaryOwnerLastTrxnDateTime__c</fullName>
        <label>Primary Owner Last Trxn Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__PrimaryOwnerTotalAUMAmt__c</fullName>
        <label>Primary Owner Total AUM</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ssot__PrimaryOwnerTotalFinAcctsQty__c</fullName>
        <label>Primary Owner Total Fin Accounts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__PrimaryOwnerTotalHeldFinAcctsAmt__c</fullName>
        <label>Primary Owner Total Held Fin Accts Amt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ssot__ReferredByContactId__c</fullName>
        <label>Referred By Contact</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReferredByUserId__c</fullName>
        <label>Referred By User</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RelationshipStartDate__c</fullName>
        <label>Relationship Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__TotalFinAcctsAmt__c</fullName>
        <label>Total Financial Account Amt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ssot__WalletSharePercent__c</fullName>
        <label>Wallet Share Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761236658_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FinancialCustomer_AccountId_map_Acco_rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>FinancialCustomer_AccountId_map_Acco_rel</relationshipLabel>
        <relationshipName>rel_1697761236658_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>